--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>My Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom Fonts -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/stylish-portfolio.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link
+      href="vendor/fontawesome-free/css/all.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="vendor/simple-line-icons/css/simple-line-icons.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/stylish-portfolio.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
 
   <body id="page-top">
-
     <!-- Navigation -->
     <a class="menu-toggle rounded" href="#">
       <i class="fas fa-bars"></i>
@@ -47,23 +58,35 @@
 
     <!-- Header -->
     <header class="masthead d-flex">
-      <div class="container text-center my-auto" data-aos="fade-down" data-aos-duration="1000">
+      <div
+        class="container text-center my-auto"
+        data-aos="fade-down"
+        data-aos-duration="1000"
+      >
         <h2><b>Jonathan Mai</b></h2>
         <h1>Full Stack Engineer</h1>
-        <br>
+        <br />
         <ul class="list-inline">
-            <li class="list-inline-item">
-              <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/hjm0809/">
-                <i class="fab fa-linkedin"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="social-link rounded-circle text-white mr-3" href="https://www.github.com/hjmai">
-                <i class="fab fa-github-square"></i>
-              </a>
-            </li>
-          </ul>
-        <a href="#about" class="about btn btn-primary js-scroll-trigger">View Profile <i class="fas fa-arrow-right"></i></a>
+          <li class="list-inline-item">
+            <a
+              class="social-link rounded-circle text-white mr-3"
+              href="https://www.linkedin.com/in/hjm0809/"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a
+              class="social-link rounded-circle text-white mr-3"
+              href="https://www.github.com/hjmai"
+            >
+              <i class="fab fa-github-square"></i>
+            </a>
+          </li>
+        </ul>
+        <a href="#about" class="about btn btn-primary js-scroll-trigger"
+          >View Profile <i class="fas fa-arrow-right"></i
+        ></a>
       </div>
       <div class="overlay"></div>
     </header>
@@ -72,20 +95,33 @@
     <section class="content-section bg-light" id="about">
       <div class="container text-center">
         <div class="row">
-          <div class="col-lg-4 mx-auto" data-aos="fade-right" data-aos-duration="500" data-aos-anchor-placement="center-bottom" data-aos-anchor="#about">
-            <img class="img-fluid profile" src="./img/profile.jpg"/>
+          <div
+            class="col-lg-4 mx-auto"
+            data-aos="fade-right"
+            data-aos-duration="500"
+            data-aos-anchor-placement="center-bottom"
+            data-aos-anchor="#about"
+          >
+            <img class="img-fluid profile" src="./img/profile.jpg" />
           </div>
-          <div class="col-lg-8" data-aos="fade-left" data-aos-duration="500" data-aos-anchor-placement="center-bottom" data-aos-anchor="#about">
+          <div
+            class="col-lg-8"
+            data-aos="fade-left"
+            data-aos-duration="500"
+            data-aos-anchor-placement="center-bottom"
+            data-aos-anchor="#about"
+          >
             <h2>About Me</h2>
-            <hr>
+            <hr />
             <p>
-              I graduated from California State University, Fullerton in 2017 as a computer science major and 
-              I am on the full stack engineer career path. I enjoy working with a team where I can learn, grow, and
-              help others achieve their success. From my experience, I have worked with several full stack technologies 
-              including Bootstrap, Materialize, JQuery, NodeJS, MySQL, SequelizeJS, and MongoDB. My favorite development
-              stack at the moment is Handlebars and SequelizeJS but I am beginning to learn ReactJS and MongoDb and loving every lesson.
-              Whether it is handling server requests, fleshing out a beautiful front-end, creating a database back-end, or wiring up
-              all three, I am determined to bring your ideas to life.
+              I graduated from California State University, Fullerton in 2017 as
+              a computer science major with an emphasis in full stack
+              engineering. I enjoy working with a team where I can learn, grow,
+              and help others achieve their success. I am passionate about the
+              MERN stack and enjoy using a React framework called Next.js.
+              Whether it is handling server requests, fleshing out an intuitive
+              front-end, creating a database back-end, or wiring up all three, I
+              am determined to bring your ideas to life.
             </p>
           </div>
         </div>
@@ -93,12 +129,37 @@
     </section>
 
     <!-- Services -->
-    <section class="content-section bg-primary text-white text-center" id="skills">
+    <section
+      class="content-section bg-primary text-white text-center"
+      id="skills"
+    >
       <div class="container">
         <div class="content-section-heading">
-          <h2 class="mb-5" data-aos="fade-in" data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-anchor="#skills">Skills</h2>
+          <h2
+            class="mb-5"
+            data-aos="fade-in"
+            data-aos-duration="1500"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-anchor="#skills"
+          >
+            Skills
+          </h2>
         </div>
-        <div class="row" data-aos="fade-left" data-aos-duration="500" data-aos-anchor-placement="top-center" data-aos-anchor="#skills">
+        <div
+          class="row"
+          data-aos="fade-left"
+          data-aos-duration="500"
+          data-aos-anchor-placement="top-center"
+          data-aos-anchor="#skills"
+        >
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-react"></i>
+            </span>
+            <h4>
+              <strong>ReactJS</strong>
+            </h4>
+          </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-html5"></i>
@@ -108,13 +169,13 @@
             </h4>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-              <span class="service-icon rounded-circle mx-auto mb-3">
-                <i class="fab fa-css3-alt"></i>
-              </span>
-              <h4>
-                <strong>CSS</strong>
-              </h4>
-            </div>
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-css3-alt"></i>
+            </span>
+            <h4>
+              <strong>CSS</strong>
+            </h4>
+          </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-js-square"></i>
@@ -123,16 +184,35 @@
               <strong>Javascript</strong>
             </h4>
           </div>
+        </div>
+        <div
+          class="row"
+          style="padding-top: 3vh;"
+          data-aos="fade-right"
+          data-aos-duration="500"
+          data-aos-anchor-placement="top-center"
+          data-aos-anchor="#skills"
+        >
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <img class="img-fluid" style="padding-bottom: 1vh; height: 65px;" src="./img/c-plus-plus-logo-filled.png">
+              <svg
+                height="50"
+                viewBox="0 0 148 90"
+                version="1.1"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                style="transform:translateX(4%);shape-rendering:auto"
+              >
+                <path
+                  d="M34.992 23.495h27.855v2.219H37.546v16.699h23.792v2.219H37.546v18.334h25.591v2.219H34.992v-41.69zm30.35 0h2.96l13.115 18.334 13.405-18.334L113.055.207 83.1 43.756l15.436 21.429H95.46L81.417 45.683 67.316 65.185h-3.018L79.85 43.756 65.343 23.495zm34.297 2.219v-2.219h31.742v2.219h-14.623v39.47h-2.554v-39.47H99.64zM.145 23.495h3.192l44.011 66.003L29.16 65.185 2.814 26.648l-.116 38.537H.145v-41.69zm130.98 38.801c-.523 0-.914-.405-.914-.928 0-.524.391-.929.913-.929.528 0 .913.405.913.929 0 .523-.385.928-.913.928zm2.508-2.443H135c.019.742.56 1.24 1.354 1.24.888 0 1.391-.535 1.391-1.539v-6.356h1.391v6.362c0 1.808-1.043 2.849-2.77 2.849-1.62 0-2.732-1.01-2.732-2.556zm7.322-.08h1.379c.118.853.95 1.395 2.149 1.395 1.117 0 1.937-.58 1.937-1.377 0-.685-.521-1.097-1.708-1.377l-1.155-.28c-1.62-.38-2.36-1.166-2.36-2.487 0-1.602 1.304-2.668 3.26-2.668 1.82 0 3.15 1.066 3.23 2.58h-1.354c-.13-.828-.85-1.346-1.894-1.346-1.1 0-1.832.53-1.832 1.34 0 .642.472 1.01 1.64 1.284l.987.243c1.838.43 2.596 1.178 2.596 2.53 0 1.72-1.33 2.799-3.453 2.799-1.987 0-3.323-1.029-3.422-2.637z"
+                  fill="#1d809f"
+                  fill-rule="nonzero"
+                ></path>
+              </svg>
             </span>
             <h4>
-              <strong>C++</strong>
+              <strong>Next.js</strong>
             </h4>
           </div>
-        </div>
-        <div class="row" style="padding-top: 3vh;" data-aos="fade-right" data-aos-duration="500" data-aos-anchor-placement="top-center" data-aos-anchor="#skills">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-node-js"></i>
@@ -143,7 +223,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-                <i class="fas fa-database"></i>
+              <i class="fas fa-database"></i>
             </span>
             <h4>
               <strong>Databases</strong>
@@ -151,18 +231,11 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="fas fa-code-branch"></i>
+              <!-- <i class="fas fa-code-branch"></i> -->
+              <img src="img/material-ui-logo.svg" />
             </span>
             <h4>
-              <strong>Version Control</strong>
-            </h4>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="fab fa-react"></i>
-            </span>
-            <h4>
-              <strong>ReactJS</strong>
+              <strong>Material UI</strong>
             </h4>
           </div>
         </div>
@@ -172,12 +245,23 @@
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
       <div class="container">
-        <div class="content-section-heading text-center" data-aos="zoom-in" data-aos-anchor="#portfolio" data-aos-anchor-placement="top-center">
+        <div
+          class="content-section-heading text-center"
+          data-aos="zoom-in"
+          data-aos-anchor="#portfolio"
+          data-aos-anchor-placement="top-center"
+        >
           <h3 class="text-secondary mb-0">Portfolio</h3>
           <h2 class="mb-5  ">My Top Projects</h2>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6" data-aos="flip-up" data-aos-anchor="#portfolio" data-aos-anchor-placement="top-center" data-aos-duration="1000">
+          <div
+            class="col-lg-6"
+            data-aos="flip-up"
+            data-aos-anchor="#portfolio"
+            data-aos-anchor-placement="top-center"
+            data-aos-duration="1000"
+          >
             <a class="portfolio-item" href="https://github.com/hjmai/Project2">
               <span class="caption">
                 <span class="caption-content">
@@ -185,51 +269,87 @@
                   <p class="mb-0">Group Project Reddit Clone</p>
                 </span>
               </span>
-              <img class="img-fluid" src="./img/portfolio-1.png" alt="">
+              <img class="img-fluid" src="./img/portfolio-1.png" alt="" />
             </a>
           </div>
-          <div class="col-lg-6" data-aos="flip-up" data-aos-anchor="#portfolio" data-aos-anchor-placement="top-center" data-aos-duration="1000" data-aos-delay="300">
+          <div
+            class="col-lg-6"
+            data-aos="flip-up"
+            data-aos-anchor="#portfolio"
+            data-aos-anchor-placement="top-center"
+            data-aos-duration="1000"
+            data-aos-delay="300"
+          >
             <a class="portfolio-item" href="http://jmaiphotography.com/">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Photography Website</h2>
-                  <p class="mb-0">My own photography website where I host my images!</p>
+                  <p class="mb-0">
+                    My own photography website where I host my images!
+                  </p>
                 </span>
               </span>
-              <img class="img-fluid" src="./img/portfolio-3.png" alt="">
+              <img class="img-fluid" src="./img/portfolio-3.png" alt="" />
             </a>
           </div>
-          <div class="col-lg-6" data-aos="flip-up" data-aos-anchor="#portfolio" data-aos-anchor-placement="top-center" data-aos-duration="1000" data-aos-delay="600">
-            <a class="portfolio-item" href="https://hjmai.github.io/pokemonHangman/">
+          <div
+            class="col-lg-6"
+            data-aos="flip-up"
+            data-aos-anchor="#portfolio"
+            data-aos-anchor-placement="top-center"
+            data-aos-duration="1000"
+            data-aos-delay="600"
+          >
+            <a
+              class="portfolio-item"
+              href="https://hjmai.github.io/pokemonHangman/"
+            >
               <span class="caption">
                 <span class="caption-content">
                   <h2>Pokemon Hangman</h2>
                 </span>
               </span>
-              <img class="img-fluid" src="./img/portfolio-4.png" alt="">
+              <img class="img-fluid" src="./img/portfolio-4.png" alt="" />
             </a>
           </div>
-          <div class="col-lg-6" data-aos="flip-up" data-aos-anchor="#portfolio" data-aos-anchor-placement="top-center" data-aos-duration="1000" data-aos-delay="900">
-            <a class="portfolio-item" href="https://github.com/hjmai/BootcampProject1">
+          <div
+            class="col-lg-6"
+            data-aos="flip-up"
+            data-aos-anchor="#portfolio"
+            data-aos-anchor-placement="top-center"
+            data-aos-duration="1000"
+            data-aos-delay="900"
+          >
+            <a
+              class="portfolio-item"
+              href="https://github.com/hjmai/BootcampProject1"
+            >
               <span class="caption">
                 <span class="caption-content">
                   <h2>Fire Rocks</h2>
                   <p class="mb-0">Hearthstone Deck Builder</p>
                 </span>
               </span>
-              <img class="img-fluid" src="./img/portfolio-2.png" alt="">
+              <img class="img-fluid" src="./img/portfolio-2.png" alt="" />
             </a>
           </div>
-          <div class="col-lg-12 text-center" data-aos="flip-up" data-aos-anchor="#portfolio" data-aos-anchor-placement="top-center" data-aos-duration="1000" data-aos-delay="1200">
-              <a class="portfolio-item" href="https://github.com/hjmai/">
-                <span class="caption">
-                  <span class="caption-content">
-                    <p>See all my projects here</p>
-                  </span>
+          <div
+            class="col-lg-12 text-center"
+            data-aos="flip-up"
+            data-aos-anchor="#portfolio"
+            data-aos-anchor-placement="top-center"
+            data-aos-duration="1000"
+            data-aos-delay="1200"
+          >
+            <a class="portfolio-item" href="https://github.com/hjmai/">
+              <span class="caption">
+                <span class="caption-content">
+                  <p>See all my projects here</p>
                 </span>
-                <img class="img-fluid" src="./img/portfolio-5.png" alt="">
-              </a>
-            </div>
+              </span>
+              <img class="img-fluid" src="./img/portfolio-5.png" alt="" />
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -237,7 +357,9 @@
     <!-- Footer -->
     <footer class="footer text-center">
       <div class="container">
-        <p class="text-muted small mb-0">Copyright &copy; hjmai.github.io 2018</p>
+        <p class="text-muted small mb-0">
+          Copyright &copy; hjmai.github.io 2018
+        </p>
       </div>
     </footer>
 
@@ -254,19 +376,23 @@
 
     <!-- Custom scripts for this template -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124230035-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-124230035-1"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-124230035-1');
+      gtag("config", "UA-124230035-1");
     </script>
     <script src="js/stylish-portfolio.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-        AOS.init();
+      AOS.init();
     </script>
   </body>
-
 </html>
